[package]
name = "exp-math-engine"
version = "0.1.0"
authors = ["teln0 <telnobynoyator@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "exp_math_engine"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "=0.4.0"

[dependencies]
neon-serde = "=0.4.0"
neon = {version = "=0.4.0"}
lazy_static = "1.4.0"
serde = {version = "1.0.116", features = ["derive", "rc"]}
serde_json = "1.0.58"
